--- a/style/gustavo.css
+++ b/style/gustavo.css
@@ -15,11 +15,40 @@
   overflow-x: auto;
 }
 
-.border {
-  margin-right: 139px;
-  margin-left: 139px;
-  border: 2px solid rgba(0, 0, 0, 0.525);
-  border-radius: 10px;
+#hourlyForecast {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+
+.section {
+  border: 1px solid rgba(0, 0, 0, 0.225);
+  border-radius: 30px;
+  height: 150px;
+  width: 150px;
+}
+.section .section-content .details1 {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: -20px;
+  margin-left: 35px;
+}
+.section .section-content .details1 p {
+  display: flex;
+  flex-direction: row;
+}
+.section .section-content .details2 {
+  display: flex;
+  flex-direction: row;
+  margin-left: 15px;
+}
+.section .section-content .details2 p {
+  display: flex;
+  flex-direction: row;
 }
 
 .card {
