--- a/style/style.css
+++ b/style/style.css
@@ -4,10 +4,6 @@
   font-family: "Roboto", sans-serif;
 }
 
-body {
-  background-image: url("wall.jpg");
-}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -150,12 +146,25 @@ body {
 #weather .ThourMain .mainContent .temp h2 {
   text-align: center;
 }
+.frame {
+  border: 1px solid rgba(0, 0, 0, 0.225);
+  width: 1400px;
+  height: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.frame .currentTitle {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 70px;
-  background-color: aliceblue;
   align-items: center;
 }
 header form {
@@ -322,4 +331,4 @@ header form button {
   #weather .ThourMain .mainContent .temp h2 {
     text-align: center;
   }
-}/*# sourceMappingURL=gustavo.css.map */
+}/*# sourceMappingURL=style.css.map */
