--- a/style/style.scss
+++ b/style/style.scss
@@ -3,9 +3,9 @@
 * {
   font-family: 'Roboto', sans-serif;
 }
-body {
-  background-image: url("wall.jpg");
-}
+// body {
+//   background-image: url("wall.jpg");
+// }
 
 .container {
   display: flex;
@@ -162,12 +162,26 @@ body {
   }
 }
 
+.frame {
+  border: 1px solid rgba(0, 0, 0, 0.225);
+  width: 1400px;
+  height: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .currentTitle {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+}
+
 header {
   display:flex;
   flex-direction:row;
   justify-content: space-between;
   height: 70px;
-  background-color: aliceblue;
+  // background-color: aliceblue;
   align-items: center;
 
   form {
