--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,13 @@
   flex-direction: column;
   align-items: center;
 }
+.container h2 {
+  align-self: flex-start;
+}
+
+.cardClicked {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
 
 #forecast {
   font-family: "Roboto", sans-serif;
@@ -93,19 +100,11 @@
 #hourlyForecast .section .section-content .details1 {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin-bottom: -20px;
   margin-left: 20px;
 }
 #hourlyForecast .section .section-content .details1 p {
-  display: flex;
-  flex-direction: row;
-}
-#hourlyForecast .section .section-content .details2 {
-  display: flex;
-  flex-direction: row;
-  margin-left: 15px;
-}
-#hourlyForecast .section .section-content .details2 p {
   display: flex;
   flex-direction: row;
 }
@@ -114,58 +113,84 @@
   font-family: "Roboto", sans-serif;
   font-size: 1.3rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   flex-wrap: nowrap;
   overflow-x: auto;
   margin: auto;
 }
-#weather .ThourMain {
+#weather .frame {
+  border: 1px solid rgba(0, 0, 0, 0.225);
+  width: 1400px;
+  height: 410px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#weather .frame .alignment {
+  display: flex;
+  flex-direction: row;
+}
+#weather .frame .alignment .currentTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#weather .frame .alignment .currentTitle h2 {
+  font-size: 1.5rem;
+}
+#weather .frame .alignment i {
+  margin-top: 22px;
+  margin-left: 15px;
+}
+#weather .frame h3 {
+  font-size: 1.5rem;
+}
+#weather .frame .ThourMain {
+  grid-column-start: 8;
+  grid-row-start: 6;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.225);
   border-radius: 30px;
-  height: 350px;
+  height: 250px;
   width: 700px;
 }
-#weather .ThourMain .mainContent {
+#weather .frame .ThourMain .mainContent {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: nowrap;
   overflow-x: auto;
 }
-#weather .ThourMain .mainContent .dateIcon {
+#weather .frame .ThourMain .mainContent .dateIcon {
   text-align: center;
   margin-left: 20px;
 }
-#weather .ThourMain .mainContent .temp {
+#weather .frame .ThourMain .mainContent .dateIcon img {
+  max-width: 120px;
+}
+#weather .frame .ThourMain .mainContent .temp {
   display: flex;
   flex-direction: column;
   margin-right: 80px;
 }
-#weather .ThourMain .mainContent .temp h2 {
+#weather .frame .ThourMain .mainContent .temp h2 {
   text-align: center;
 }
-.frame {
-  border: 1px solid rgba(0, 0, 0, 0.225);
-  width: 1400px;
-  height: 650px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.frame .currentTitle {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
 header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 70px;
   align-items: center;
+}
+header select {
+  outline: 1px solid grey;
+  border: none;
+  height: 40px;
+  width: 200px;
+  border-radius: 10px;
 }
 header form {
   display: flex;
@@ -194,6 +219,45 @@ header form button {
 }
 
 @media (max-width: 375px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 70px;
+    align-items: center;
+  }
+  header select {
+    outline: 1px solid grey;
+    border: none;
+    height: 40px;
+    width: 40%;
+    border-radius: 10px;
+  }
+  header form {
+    display: flex;
+    flex-direction: row;
+    padding: 1px;
+  }
+  header form input {
+    outline: 1px solid grey;
+    border: none;
+    height: 40px;
+    width: 100%;
+    border-radius: 10px;
+  }
+  header form input:focus {
+    outline: none;
+  }
+  header form input:focus-within {
+    outline: 1px solid gray;
+  }
+  header form button {
+    border: 1px solid black;
+    height: 30px;
+    width: 30px;
+    background: black;
+    color: white;
+  }
   #forecast {
     font-family: "Roboto", sans-serif;
     font-size: 1.4rem;
@@ -261,7 +325,7 @@ header form button {
     font-size: 1.3rem;
     max-width: 375px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     flex-wrap: nowrap;
     overflow-x: auto;
@@ -270,65 +334,90 @@ header form button {
     border: 1px solid rgba(0, 0, 0, 0.225);
     border-radius: 30px;
     margin-right: 10px;
-    height: 150px;
-    width: 150px;
+    margin-bottom: 10px;
+    height: 60px;
+    width: 370px;
+  }
+  #hourlyForecast .section .section-content {
+    display: flex;
+    flex-direction: column;
   }
   #hourlyForecast .section .section-content .details1 {
+    width: 90%;
     display: flex;
     flex-direction: row;
-    margin-left: 20px;
-    align-items: center;
-  }
-  #hourlyForecast .section .section-content .details1 p {
-    display: flex;
-    flex-direction: row;
-  }
-  #hourlyForecast .section .section-content .details2 {
-    display: flex;
-    flex-direction: row;
-    margin-left: 20px;
-    align-items: center;
-  }
-  #hourlyForecast .section .section-content .details2 p {
-    display: flex;
-    flex-direction: row;
+    justify-content: space-around;
   }
   #weather {
     font-family: "Roboto", sans-serif;
-    font-size: 0.8rem;
+    font-size: 1.3rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
     flex-wrap: nowrap;
     overflow-x: auto;
     margin: auto;
   }
-  #weather .ThourMain {
+  #weather .frame {
+    border: 1px solid rgba(0, 0, 0, 0.225);
+    width: 360px;
+    height: 410px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #weather .frame .alignment {
+    display: flex;
+    flex-direction: row;
+  }
+  #weather .frame .alignment .currentTitle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #weather .frame .alignment .currentTitle h2 {
+    font-size: 1.5rem;
+  }
+  #weather .frame .alignment i {
+    margin-top: 22px;
+    margin-left: 15px;
+  }
+  #weather .frame h3 {
+    font-size: 1.5rem;
+  }
+  #weather .frame .ThourMain {
+    grid-column-start: 8;
+    grid-row-start: 6;
+    background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.225);
     border-radius: 30px;
-    height: 220px;
-    width: 345px;
+    height: 250px;
+    width: 340px;
   }
-  #weather .ThourMain .mainContent {
+  #weather .frame .ThourMain .mainContent {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
     overflow-x: auto;
   }
-  #weather .ThourMain .mainContent .dateIcon {
+  #weather .frame .ThourMain .mainContent .dateIcon {
     text-align: center;
     margin-left: 20px;
   }
-  #weather .ThourMain .mainContent .dateIcon img {
-    max-width: 120px;
+  #weather .frame .ThourMain .mainContent .dateIcon img {
+    max-width: 100px;
   }
-  #weather .ThourMain .mainContent .temp {
+  #weather .frame .ThourMain .mainContent .dateIcon h2 {
+    font-size: 1.5rem;
+  }
+  #weather .frame .ThourMain .mainContent .temp {
     display: flex;
     flex-direction: column;
-    margin-right: 80px;
+    margin-right: 30px;
   }
-  #weather .ThourMain .mainContent .temp h2 {
+  #weather .frame .ThourMain .mainContent .temp h2 {
     text-align: center;
   }
 }/*# sourceMappingURL=style.css.map */
